@@ -12,6 +12,8 @@ IMPROVEMENTS
   TEZ-2662. Provide a way to check whether AM or task opts are valid and error if not.
 
 BUG FIXES
+  TEZ-2768. (BUG-41800). Log a useful error message when the summary stream cannot be closed when shutting
+  down an AM.
   TEZ-2745. (BUG-43220) ClassNotFound in InputInitializer causes AM to crash
   TEZ-2602. (BUG-40970) Throwing EOFException when launching MR job
   TEZ-2575. (BUG-40970) Handle KeyValue pairs size which do not fit in a single block in PipelinedSorter
